# openephys2dat

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: hdfexport.h  scanHDF5.hpp  xcorr.h
include/sigpack/gplot/: gplot.h
src/: hdfexport.cpp  main.cpp
